k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsoi-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "gryteck.cloud.okteto.net"
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
